# did-registry

./: .gitignore  .prettierignore  Anchor.toml  README.md  package.json  tsconfig.json
.github/workflows/: test.yaml
programs/did-registry/: Cargo.toml
programs/did-registry/src/: eth_signing.rs  lib.rs
programs/did-registry/src/instructions/: close_controller_registry.rs  close_key_registry.rs  create_controller_registry.rs  create_key_registry.rs  mod.rs  register_controlled_did.rs  register_did.rs  register_did_for_eth_address.rs  register_did_signed_by_eth_address.rs  remove_controlled_did.rs  remove_did.rs  resize_controller_registry.rs  resize_key_registry.rs
programs/did-registry/src/state/: controller_registry.rs  key_registry.rs  mod.rs
programs/did-registry/src/util/: did.rs  eth_signing.rs  mod.rs
scripts/: registerAddress.ts  registerEthAddress.ts  registerEthAddressEthSigns.ts
scripts/util/: solana.ts  util.ts
src/: index.ts
src/lib/: CommonRegistry.ts  constants.ts  util.ts
src/service/controllerRegistry/: AbstractControllerRegistry.ts  ControllerRegistry.ts  ReadOnlyControllerRegistry.ts
src/service/keyRegistry/: AbstractKeyRegistry.ts  EthRegistry.ts  ReadOnlyRegistry.ts  Registry.ts
src/types/: did_registry.ts  index.ts
tests/: ControllerRegistry.ts  KeyRegistry.ts  did-registry.ts
tests/util/: anchorUtils.ts  constants.ts  did.ts  lang.ts
