[package]
name = "did-registry"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "did_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
sol-did = { git = "https://github.com/identity-com/sol-did", rev = "642b2c45d6f2ece1668f44e715caece4d2b712d8", features = ["no-entrypoint"] }
itertools = "0.10.3"